style: update global styles to prevent horizontal overflow and disable overscrolling

--- a/app/globals.css
+++ b/app/globals.css
@@ -87,7 +87,7 @@ body {
     @apply bg-background m-0 p-0 box-border text-foreground h-full;
   }
   html {
-    @apply h-full;
+    @apply h-full overflow-x-hidden overscroll-none;
   }
 }
 
